--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-streamlit==1.24.0
-pandas==2.0.3
-scikit-learn==1.2.2
-xgboost==1.7.5
+streamlit==1.34.0
+numpy==1.23.5
+scikit-learn==1.5.2
+scipy==1.14.1
+pandas==<latest compatible version>
+
